- add support multiple locales

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ var title             =   construct.ug.get('title');
     </p>
 
     <script>
+        var construct   =   new construct('af_ZA');
+
         document.getElementById('first_name').innerText = construct.ug.get('first_name');
         document.getElementById('sur_name').innerText = construct.ug.get('sur_name');
         document.getElementById('name').innerText = construct.ug.get('name');
