- add locale en_GB (United Kingdom) - add afterHook

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ var title             =   construct.ug.get('title');
     </p>
 
     <script>
-        var construct   =   new construct();
+        var construct   =   new construct('en_GB');
 
         document.getElementById('address').innerText = construct.ug.get('address');
         document.getElementById('first_name').innerText = construct.ug.get('first_name');
