--- a/index.html
+++ b/index.html
@@ -2,46 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>construct.js example</title>
+    <title>constructs.js example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="dist/construct.min.js" type="text/javascript"></script>
+    <script src="dist/constructs.min.js" type="text/javascript"></script>
 
     <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/default.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
 </head>
 <body class="container">
-    <h1 class="text-center">construct.js Example</h1>
-    <p>With Construct random content can be generated quickly and in large quantities. Whether via <strong>JavaScript</strong> or with <strong>NodeJS</strong>.</p>
+    <h1 class="text-center">constructs.js Example</h1>
+    <p>With Constructs random content can be generated quickly and in large quantities. Whether via <strong>JavaScript</strong> or with <strong>NodeJS</strong>.</p>
 
     <h4>Automatically generate a random values</h4>
 
     <pre><code class="language-javascript">
-&#x3C;script src=&#x22;dist/construct.min.js&#x22; type=&#x22;text/javascript&#x22;&#x3E;&#x3C;/script&#x3E;
+&#x3C;script src=&#x22;dist/constructs.min.js&#x22; type=&#x22;text/javascript&#x22;&#x3E;&#x3C;/script&#x3E;
 
-var address           =   construct.ug.get('address');
-var building_number   =   construct.ug.get('building_number');
-var cell_phone        =   construct.ug.get('cell_phone');
-var city              =   construct.ug.get('city');
-var company           =   construct.ug.get('company');
-var country           =   construct.ug.get('country');
-var email             =   construct.ug.get('email');
-var first_name        =   construct.ug.get('first_name');
-var gender            =   construct.ug.get('gender');
-var image             =   construct.ug.get('image');
-var image_animal      =   construct.ug.get('image', {type: 'animal'});
-var image_city        =   construct.ug.get('image', {type: 'city'});
-var image_human       =   construct.ug.get('image', {type: 'human'});
-var image_nature      =   construct.ug.get('image', {type: 'nature'});
-var image_technic     =   construct.ug.get('image', {type: 'technic'});
-var loremIpsum        =   construct.ug.get('loremIpsum', {words: 10});
-var name              =   construct.ug.get('name');
-var phone             =   construct.ug.get('phone');
-var postcode          =   construct.ug.get('postcode');
-var state             =   construct.ug.get('state');
-var street            =   construct.ug.get('street');
-var sur_name          =   construct.ug.get('sur_name');
-var title             =   construct.ug.get('title');
+var address           =   constructs.ug.get('address');
+var building_number   =   constructs.ug.get('building_number');
+var cell_phone        =   constructs.ug.get('cell_phone');
+var city              =   constructs.ug.get('city');
+var company           =   constructs.ug.get('company');
+var country           =   constructs.ug.get('country');
+var email             =   constructs.ug.get('email');
+var first_name        =   constructs.ug.get('first_name');
+var gender            =   constructs.ug.get('gender');
+var image             =   constructs.ug.get('image');
+var image_animal      =   constructs.ug.get('image', {type: 'animal'});
+var image_city        =   constructs.ug.get('image', {type: 'city'});
+var image_human       =   constructs.ug.get('image', {type: 'human'});
+var image_nature      =   constructs.ug.get('image', {type: 'nature'});
+var image_technic     =   constructs.ug.get('image', {type: 'technic'});
+var loremIpsum        =   constructs.ug.get('loremIpsum', {words: 10});
+var name              =   constructs.ug.get('name');
+var phone             =   constructs.ug.get('phone');
+var postcode          =   constructs.ug.get('postcode');
+var state             =   constructs.ug.get('state');
+var street            =   constructs.ug.get('street');
+var sur_name          =   constructs.ug.get('sur_name');
+var title             =   constructs.ug.get('title');
     </code></pre>
 
     <p>
@@ -71,42 +71,42 @@ var title             =   construct.ug.get('title');
     </p>
 
     <script>
-        var construct   =   new construct('en_GB');
+        var constructs   =   new constructs('en_GB');
 
-        document.getElementById('address').innerText = construct.ug.get('address');
-        document.getElementById('first_name').innerText = construct.ug.get('first_name');
-        document.getElementById('sur_name').innerText = construct.ug.get('sur_name');
-        document.getElementById('name').innerText = construct.ug.get('name');
-        document.getElementById('building_number').innerText = construct.ug.get('building_number');
-        document.getElementById('cell_phone').innerText = construct.ug.get('cell_phone');
-        document.getElementById('city').innerText = construct.ug.get('city');
-        document.getElementById('company').innerText = construct.ug.get('company');
-        document.getElementById('country').innerText = construct.ug.get('country');
-        document.getElementById('email').innerText = construct.ug.get('email');
-        document.getElementById('gender').innerText = construct.ug.get('gender');
-        document.getElementById('loremIpsum').innerText = construct.ug.get('loremIpsum', {words: 10});
-        document.getElementById('phone').innerText = construct.ug.get('phone');
-        document.getElementById('postcode').innerText = construct.ug.get('postcode');
-        document.getElementById('state').innerText = construct.ug.get('state');
-        document.getElementById('street').innerText = construct.ug.get('street');
-        document.getElementById('title').innerText = construct.ug.get('title');
+        document.getElementById('address').innerText = constructs.ug.get('address');
+        document.getElementById('first_name').innerText = constructs.ug.get('first_name');
+        document.getElementById('sur_name').innerText = constructs.ug.get('sur_name');
+        document.getElementById('name').innerText = constructs.ug.get('name');
+        document.getElementById('building_number').innerText = constructs.ug.get('building_number');
+        document.getElementById('cell_phone').innerText = constructs.ug.get('cell_phone');
+        document.getElementById('city').innerText = constructs.ug.get('city');
+        document.getElementById('company').innerText = constructs.ug.get('company');
+        document.getElementById('country').innerText = constructs.ug.get('country');
+        document.getElementById('email').innerText = constructs.ug.get('email');
+        document.getElementById('gender').innerText = constructs.ug.get('gender');
+        document.getElementById('loremIpsum').innerText = constructs.ug.get('loremIpsum', {words: 10});
+        document.getElementById('phone').innerText = constructs.ug.get('phone');
+        document.getElementById('postcode').innerText = constructs.ug.get('postcode');
+        document.getElementById('state').innerText = constructs.ug.get('state');
+        document.getElementById('street').innerText = constructs.ug.get('street');
+        document.getElementById('title').innerText = constructs.ug.get('title');
 
-        document.getElementById('image').innerText = construct.ug.get('image');
+        document.getElementById('image').innerText = constructs.ug.get('image');
         document.getElementById('image_img').src = document.getElementById('image').innerText;
 
-        document.getElementById('image_nature').innerText = construct.ug.get('image', {type: 'nature'});
+        document.getElementById('image_nature').innerText = constructs.ug.get('image', {type: 'nature'});
         document.getElementById('image_nature_img').src = document.getElementById('image_nature').innerText;
 
-        document.getElementById('image_animal').innerText = construct.ug.get('image', {type: 'animal'});
+        document.getElementById('image_animal').innerText = constructs.ug.get('image', {type: 'animal'});
         document.getElementById('image_animal_img').src = document.getElementById('image_animal').innerText;
 
-        document.getElementById('image_city').innerText = construct.ug.get('image', {type: 'city'});
+        document.getElementById('image_city').innerText = constructs.ug.get('image', {type: 'city'});
         document.getElementById('image_city_img').src = document.getElementById('image_city').innerText;
 
-        document.getElementById('image_human').innerText = construct.ug.get('image', {type: 'human'});
+        document.getElementById('image_human').innerText = constructs.ug.get('image', {type: 'human'});
         document.getElementById('image_human_img').src = document.getElementById('image_human').innerText;
 
-        document.getElementById('image_technic').innerText = construct.ug.get('image', {type: 'technic'});
+        document.getElementById('image_technic').innerText = constructs.ug.get('image', {type: 'technic'});
         document.getElementById('image_technic_img').src = document.getElementById('image_technic').innerText;
     </script>
 
@@ -128,11 +128,11 @@ var title             =   construct.ug.get('title');
     <script>
         for(var i = 0; ++i <= 5;)
         {
-            var avatar      =   construct.ug.get('image', {type: 'avatar'});
-            var name        =   construct.ug.get('name');
-            var birthday    =   construct.ug.date('2020-01-01');
-            var age         =   construct.ug.diffYearNow(birthday);
-            var address     =   construct.ug.get('address');
+            var avatar      =   constructs.ug.get('image', {type: 'avatar'});
+            var name        =   constructs.ug.get('name');
+            var birthday    =   constructs.ug.date('2020-01-01');
+            var age         =   constructs.ug.diffYearNow(birthday);
+            var address     =   constructs.ug.get('address');
 
             // Append to table
             var tableRef    =   document.getElementsByTagName('tbody')[0];
@@ -152,7 +152,7 @@ var title             =   construct.ug.get('title');
 
     <h4>Generating a JSON based on a template</h4>
 <pre><code class="language-javascript">
-&#x3C;script src=&#x22;dist/construct.min.js&#x22; type=&#x22;text/javascript&#x22;&#x3E;&#x3C;/script&#x3E;
+&#x3C;script src=&#x22;dist/constructs.min.js&#x22; type=&#x22;text/javascript&#x22;&#x3E;&#x3C;/script&#x3E;
 
 let template = {
     name: "Example template",
@@ -193,7 +193,7 @@ let template = {
     }
 };
 
-let generatedData = construct.generateUniqData(template);
+let generatedData = constructs.generateUniqData(template);
 
 console.log(generatedData);
     </code></pre>
@@ -240,7 +240,7 @@ console.log(generatedData);
             }
         };
 
-        let generatedData = construct.generateUniqData(template);
+        let generatedData = constructs.generateUniqData(template);
 
         document.getElementById('json').innerText  =   JSON.stringify(JSON.parse(generatedData), null, 2);
     </script>
