--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ var title             =   constructs.name.getTitle();
     </p>
 
     <script>
-        var constructs   =   new constructs('ge');
+        var constructs   =   new constructs();
 
         document.getElementById('address').innerText = constructs.address.getAddress();
         document.getElementById('first_name').innerText = constructs.name.getFirstName();
